Fix layout bugs & get reaction feature back

--- a/src/containers/Header/style.css
+++ b/src/containers/Header/style.css
@@ -100,6 +100,10 @@
     font-size: 35px;
     color: white;
   }
+
+  #my-presentation-btn {
+    background-color: transparent;
+  }
   .header > .logo-wrap {
     width: 70%;
   }
